# foundry

./: .env.example  .env.template  .gitignore  BETA_FIXES_SUMMARY.md  BETA_RELEASE_NOTES.md  BETA_Release_Status.md  CONTRIBUTING.md  LICENSE  MODEL_SETUP_GUIDE.md  PIPELINE_WORKFLOW.md  README.md  RELEASE_NOTES.md  SECURITY.md  SETUP_INSTRUCTIONS.md  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml  setup.bat  start-docker.sh  start.bat  stop.bat
backend/: Dockerfile  app_flask_old.py  app_new.py  generate_test_data.py  install_dependencies.py  learning_log_metasploit.json  novelty_counts.json  pyproject.toml  requirements.txt  run_data_enrichment.py  test_novelty_data.json
backend/Output/: extracted
backend/app/: main.py  vllm_client.py  watchdog.py
backend/config/: pipeline_config.py  server_config.py
backend/routes/: docker_routes.py  evaluation_routes.py  file_routes.py  novelty_routes.py  pipeline_routes.py  server_routes.py  system_routes.py
backend/scripts/: run_data_enrichment_wrapper.py
backend/utils/: error_handler.py  model_deployment_manager.py  process_manager.py  unified_error_handler.py
data/: README.md
docs/: DOCUMENTATION_STRUCTURE.md
frontend/: .env.development  .eslintrc.js  Dockerfile  Dockerfile.new  env.sh  nginx.conf  package-lock.json  package.json  tailwind.config.js
scripts/: README.md  README_data_enrichment.md  README_manual_extractor.md  SCRIPT_VERSIONS_GUIDE.md  check_cuda.py  create_mock_datasets.py  data_enrichment.py  data_enrichment_enhanced_gpu_fixed_v2.py  data_enrichment_improved.py  (+23 more)
(+58 files in other folders)
