[tool.poetry]
name = "model-distillation-ui-backend"
version = "0.1.0"
description = "Backend for Model Distillation Pipeline UI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
psutil = "^5.9.6"
gputil = "^1.4.0"
websockets = "^11.0.3"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
pymupdf = "^1.23.7"
spacy = "^3.7.2"
pytesseract = "^0.3.10"
pillow = "^10.1.0"
transformers = "^4.35.2"
scikit-learn = "^1.3.2"
sentence-transformers = "^2.2.2"
nltk = "^3.8.1"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
